--- a/app/modules/retention/templates/retention.html
+++ b/app/modules/retention/templates/retention.html
@@ -4,7 +4,7 @@
       <div class="col-md-6 col-md-offset-3">
         <h3 align="center">Total Meter Leases In Transactable Window</h3>
         <div style="border:2px solid black; text-align: center;">
-          <h2>1000</h2>
+          <h2>{{retention.totalLeases}}</h2>
         </div>
       </div>
       <div class="col-md-3">
